Refactor sign in with google 2

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+api==0.0.7
 asgiref==3.5.0
 astroid==2.12.13
-backports.zoneinfo==0.2.1
+autopep8==2.0.1
+beautifulsoup4==4.11.1
+cachetools==4.2.4
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -10,53 +13,73 @@ coreschema==0.0.4
 coverage==6.3.2
 cryptography==39.0.0
 defusedxml==0.7.1
+Deprecated==1.2.13
 dill==0.3.6
 Django==4.0.2
+django-braces==1.15.0
+django-cors-headers==3.13.0
 django-crontab==0.7.1
 django-filter==21.1
+django-oauth-toolkit==2.2.0
 django-phonenumber-field==7.0.2
+django-rest-framework-social-oauth2==1.1.0
 django-rest-swagger==2.2.0
 django-templated-mail==1.1.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.2
 djoser==2.1.0
+drf-social-oauth2==1.2.1
 drf-yasg==1.21.4
+ecdsa==0.18.0
 future==0.18.2
-gunicorn==20.1.0
+google==3.0.0
+google-api-core==2.11.0
+google-api-python-client==2.74.0
+google-auth==2.16.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.58.0
+httplib2==0.21.0
 idna==3.4
 importlib-metadata==4.11.1
 inflection==0.5.1
 isort==5.11.3
 itypes==1.2.0
 Jinja2==3.1.2
+jwcrypto==1.4.2
 lazy-object-proxy==1.8.0
 Markdown==3.3.6
 MarkupSafe==2.1.1
 mccabe==0.7.0
+nose==1.3.7
 oauthlib==3.2.2
 openapi-codec==1.3.2
 packaging==22.0
 phonenumbers==8.13.4
 platformdirs==2.6.0
+protobuf==4.21.12
 psycopg2==2.9.5
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.10.0
 pycparser==2.21
 PyJWT==2.3.0
 pylint==2.15.9
+pyparsing==3.0.9
+python-jose==3.3.0
 python3-openid==3.2.0
 pytz==2021.3
 requests==2.28.1
 requests-oauthlib==1.3.1
+rsa==4.9
 ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.7
 serializers==0.2.4
 simplejson==3.18.0
 six==1.16.0
 social-auth-app-django==5.0.0
 social-auth-core==4.3.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
-tomli==2.0.1
 tomlkit==0.11.6
-typing-extensions==4.4.0
 tzdata==2022.7
 uritemplate==4.1.1
 urllib3==1.26.13
